// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get contacts from aceventura (last_usage) 1`] = `
Array [
  Array [
    "aceventura",
    Object {},
    Object {
      "limit": 10,
      "offset": 0,
      "sort": "last_usage",
    },
  ],
]
`;

exports[`get contacts from aceventura (last_usage) 2`] = `
Object {
  "contacts": Array [
    Object {
      "contact_id": 42,
    },
  ],
}
`;

exports[`get contacts from aceventura (search) 1`] = `
Array [
  Array [
    "search",
    Object {},
    Object {
      "limit": 10,
      "offset": 0,
      "query": "search",
    },
  ],
]
`;

exports[`get contacts from aceventura (search) 2`] = `
Object {
  "contacts": Array [
    Object {
      "contact_id": 42,
    },
  ],
}
`;

exports[`get contacts from aceventura (usage_frequency) 1`] = `
Array [
  Array [
    "aceventura",
    Object {},
    Object {
      "limit": 10,
      "offset": 0,
      "sort": "usage_frequency",
    },
  ],
]
`;

exports[`get contacts from aceventura (usage_frequency) 2`] = `
Object {
  "contacts": Array [
    Object {
      "contact_id": 42,
    },
  ],
}
`;

exports[`get contacts from collie 1`] = `
Array [
  Array [
    "collie",
    Object {},
    Object {
      "limit": 10,
      "offset": 0,
      "sort": "alpha",
    },
  ],
]
`;

exports[`get contacts from collie 2`] = `
Object {
  "contacts": Array [
    Object {
      "contact_id": 42,
    },
  ],
}
`;
